docs: patch subscriptions/:id handler
